# juggler

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SPEC.md  TODOs.toml  TODOs.yaml  dist-workspace.toml
.cursor/: environment.json
.github/workflows/: ci.yml  convention-commit-pr-title.yml  release-plan-tests.yml  release.yml  rust.yml
docs/: google-tasks-sync.md
src/: auth.rs  config.rs  credential_storage.rs  credentials.rs  error.rs  google_tasks.rs  main.rs  oauth.rs  store.rs  time.rs  ui.rs
src/ui/: editor.rs  event.rs  keymap.rs  mod.rs  model.rs  render.rs  state.rs  todo.rs  update.rs  view.rs  widgets.rs
