[package]
name = "juggler"
version = "0.1.0"
description = "TODO juggler"
authors = ["Peter Schuller <peter.schuller@infidyne.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0"
ratatui = "0"
color-eyre = "0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
chrono = { version = "0", features = ["serde"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
