[package]
name = "juggler"
version = "0.1.0"
description = "TODO juggler"
authors = ["Peter Schuller <peter.schuller@infidyne.com>"]
license = "MIT"
edition = "2024"

[dependencies]
crossterm = "0"
ratatui = "0"
color-eyre = "0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
chrono = { version = "0", features = ["serde"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
url = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.9"
open = "5"
dirs = "5"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"
