[package]
name = "juggler"
version = "0.1.2"
description = "TODO juggler"
authors = ["Peter Schuller <peter.schuller@infidyne.com>"]
license = "MIT"
edition = "2024"
repository = "https://github.com/scode/juggler"

[dependencies]
crossterm = "0"
ratatui = "0"
color-eyre = "0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0"
chrono = { version = "0", features = ["serde"] }
tempfile = "3"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
url = "2"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
open = "5"
dirs = "5"
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
    "vendored",
] }
oauth2 = "4"
thiserror = "1"

[dev-dependencies]
wiremock = "0.6"
tokio-test = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
